# ATTS

./: LICENSE  Pipfile  README.md  requirements.txt  requirements_dev.txt  setup.cfg
src/aats/: main.py
tests/: test_aats.py
