[metadata]
name = atts
version = 0.0.1
author = SalahDin Rezk
author_email = salah2112004@gmail.com
description = Automated Attendance Tracking System.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salastro/atts
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    gspread
    oauth2client
    loguru

[options.entry_points]
console_scripts =
    atts = atts:main

[options.extras_require]
test =
    unittest
    mock
    coverage
    pylint
    flake8
    mypy
